# dashi

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  requirements-docs.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  images.yml
adr/: ADR-001-object-storage.md  ADR-002-vector-format-geoparquet.md  ADR-003-raster-format-cog.md  ADR-004-pointcloud-copc.md  ADR-005-table-format.md  ADR-006-data-catalog.md  ADR-007-processing-engine.md  ADR-008-spatial-partitioning-h3.md  ADR-009-serving-layer.md  ADR-010-pipeline-orchestration.md  ADR-011-infra-substrate.md  ADR-012-local-substrate-orbstack.md
agents/: README.md  add-requirement.md  fill-baseline.md  resolve-open-adr.md  translate-chapter.md  update-risk.md
docs/: 01-summary.md  02-context.md  03-goals.md  04-stakeholders.md  05-requirements.md  06-baseline.md  07-logical-architecture.md  08-technology-decisions.md  09-phases.md  10-risks-open-questions.md  CLI-OPERATIONS.md  FEATURE-IDEAS.md  GATE-1-ACCEPTANCE.md  GLOSSARY.md  INDEX.md  LAUNCH-CHECKLIST.md  LAUNCH-POST.md  OPERATIONS.md  PHASE-0-ROADMAP.md  PHASE-2-ROADMAP.md  RBAC-RUNBOOK.md  TROUBLESHOOTING.md  adrs.md  classification.md  id-reference.md  index.md  poc
docs/assets/: README.md
docs/onboarding/: domain-template.md  domains.md
docs/stylesheets/: dashi.css
docs/viewer/: README.md  build.sh  package.json  pointcloud.html  viewer.bundle.js
docs/viewer/src/: entry.js
poc/: Makefile  README.md
poc/dashictl/: Cargo.toml  README.md
poc/dashictl/src/: cli.rs  config.rs  main.rs  output.rs  splash.rs
poc/dashictl/src/commands/: audit.rs  backfill.rs  backup.rs  doctor.rs  domain.rs  gc.rs  ingest.rs  item.rs  mod.rs  runs.rs  user.rs
poc/docs/: k3s-setup.md
poc/duckdb-endpoint/: Dockerfile  README.md  app.py
poc/flows/: deploy.py  ingest.py  register.py
poc/ingest/: Dockerfile  pyproject.toml
poc/ingest/fixtures/: dresden-point.geojson
poc/ingest/src/dashi_ingest/: __init__.py  cli.py  detect.py  enrich.py  runner.py  stac.py  storage.py  validators.py
poc/ingest/src/dashi_ingest/flows/: enrich.py  iceberg.py  ingest.py  retention.py
poc/ingest/src/dashi_ingest/transforms/: __init__.py  pointcloud.py  raster.py  vector.py
poc/ingest/src/miso_ingest/: __init__.py  cli.py  detect.py  partition.py  runner.py  storage.py  validators.py
poc/ingest/src/miso_ingest/transforms/: pointcloud.py  raster.py  vector.py
poc/manifests/auth/: authelia-config.yaml  authelia.yaml  kustomization.yaml  namespace.yaml  oauth2-proxy.yaml
poc/manifests/backup/: cronjobs.yaml  kustomization.yaml  namespace.yaml  offsite.env.example  script-configmap.yaml
poc/manifests/duckdb-endpoint/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
poc/manifests/iceberg/: kustomization.yaml  namespace.yaml  rest-catalog.yaml
poc/manifests/ingest-api/: deployment.yaml  kustomization.yaml  namespace.yaml
poc/manifests/ingest-web/: deployment.yaml  kustomization.yaml
poc/manifests/llm/: kustomization.yaml  ollama.yaml
poc/manifests/martin/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml
poc/manifests/monitoring/: README.md  grafana.yaml  kube-state-metrics.yaml  kustomization.yaml  loki.yaml  namespace.yaml  (+3 more)
poc/py3dtiles/: Dockerfile  generate-3dtiles.sh
poc/scripts/: 3dtiles-generate.sh  apply-with-secret.sh  auth-bootstrap.sh  auth-protect.sh  backup-bootstrap.sh  iceberg-bootstrap.sh  ingest-sample.sh  k3s-down.sh  k3s-up.sh  pmtiles-generate.sh  pointcloud-presign.sh  port-forward-all.sh  prefect-bootstrap.sh  prefect-patch-pool.sh  prefect-register.sh  rbac-bootstrap.sh  redeploy-all.sh  redeploy-resume.sh  redeploy-resume2.sh  seed-sample-domains.sh  serving-deploy.sh  synthetic-data.sh  tipg-bootstrap.sh  web-ingest-deploy.sh
poc/services/ingest-api/: Dockerfile  pyproject.toml
poc/services/ingest-api/src/dashi_ingest_api/: __init__.py  auth.py  catalog.py  clients.py  domains.py  main.py  multipart.py  presign.py  register.py  runs.py  scan.py  settings.py  trigger.py
poc/smoke/: auth.sh  backup.sh  catalog.sh  iceberg.sh  ingest.sh  llm.sh  loki.sh  martin.sh  monitoring.sh  phase2-prefect-kube.sh  pointcloud.sh  prefect.sh  rbac.sh  serving.sh  tipg.sh  web-ingest.sh
poc/tippecanoe/: Dockerfile  generate-pmtiles.sh
poc/titiler-endpoint/: Dockerfile  README.md  app.py
source/: README.md
templates/: adr.md  open-question.md  requirement.md  risk.md
(+75 files in other folders)
