[project]
name = "miso-ingest"
version = "0.0.1"
description = "MISO ingestion + standardization pipeline (PoC)"
requires-python = ">=3.11"
dependencies = [
  "gdal>=3.8",
  "rasterio>=1.3",
  "geopandas>=0.14",
  "pyarrow>=15",
  "h3>=4.0",
  "pystac>=1.10",
  "boto3>=1.34",
  "pydantic>=2.6",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
