[project]
name = "dashi-ingest"
version = "0.1.0"
description = "dashi ingestion + standardization pipeline — generic geo-format adapter"
requires-python = ">=3.11"
authors = [
  { name = "Marco Sciaini", email = "marco@kaldera.dev" },
  { name = "Johannes Schlund" },
]
dependencies = [
  "geopandas>=1.0",
  "pyogrio>=0.9",
  "rasterio>=1.4",
  "laspy[lazrs]>=2.5",
  "pyarrow>=15",
  "shapely>=2.0",
  "h3>=4.1",
  "pystac>=1.10",
  "boto3>=1.35",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
]

[project.scripts]
dashi-ingest = "dashi_ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashi_ingest"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# B008 fires on every typer.Argument(...) default — this is the documented
# typer pattern, not a real defect. Keep it ignored for the CLI module.
ignore = ["B008"]
